# Prg2023-2

Prog2/Projeto1/: CMakeLists.txt  RPN.c  RPN.h  main.c
Prog2/Projeto2/: CMakeLists.txt  Interface.c  Interface.h  main.c  main2.c
Prog2/Projeto3/: CMakeLists.txt  Inteface.c  Inteface.h  main.c
Prog2/Projeto4/: CMakeLists.txt  Inteface.c  Inteface.h  main.c
Prog2/libprg/: CMakeLists.txt
Prog2/libprg/src/include/libprg/: Fila_linear.h  Lista_encadeada.h  Lista_linear.h  Pilha.h  arvore.h  tabela.h
Prog2/libprg/src/libprg/: ContingSort.c  Fila_linear.c  Lista_encadeada.c  Lista_linear.c  Pilha.c  arvore.c  tabela.c
